rewards and coffee pos css update

--- a/rewards.njk
+++ b/rewards.njk
@@ -522,7 +522,7 @@
             </li>
         </ul>
         <div class="nav-cta">
-            <a href="#contact" class="btn btn-primary">Talk to Us</a>
+            <a href="/for-coffee-shops/#contact" class="btn btn-primary">Talk to Us</a>
         </div>
         <button class="mobile-menu-btn" id="mobileMenuBtn">
             <span></span><span></span><span></span>
@@ -547,7 +547,7 @@
             <a href="https://joe.coffee/gift-cards/">Gift Cards</a>
             <a href="https://joe.coffee/point-of-sale-for-coffee-shops/">See All Features</a>
         </div>
-        <a href="#contact" class="btn btn-primary btn-large" style="margin-top: 2rem;">Talk to Us</a>
+        <a href="/for-coffee-shops/#contact" class="btn btn-primary btn-large" style="margin-top: 2rem;">Talk to Us</a>
     </div>
 
     <main>
@@ -876,7 +876,7 @@
             <h2>Ready for loyalty that actually works?</h2>
             <p>Join 500+ shops already seeing 41x ROI with Joe Rewards.</p>
             <div class="cta-buttons">
-                <a href="/for-coffee-shops/#contact" class="btn btn-primary btn-large">Join the Collective</a>
+                <a href="/for-coffee-shops/#contact" class="btn btn-primary btn-large">Talk to Us</a>
                 <a href="/for-coffee-shops/#pricing" class="btn btn-secondary btn-large">See Pricing</a>
             </div>
         </section>
